# BioAnalysis

./: CMakeLists.txt  README.md  imgui.ini  main.cpp
include/: AppUI.h  Classifier.h  EMGFilter.h  Extractor.h  GLWindow.h  Keyboard.h  SerialDataReceiver.h  UserInterface.h
src/: AppUI.cpp  Classifier.cpp  EMGFilter.cpp  Extractor.cpp  GLWindow.cpp  Keyboard.cpp  SerialDataReceiver.cpp  UserInterface.cpp  main.cpp
